--- a/_config.yml
+++ b/_config.yml
@@ -85,8 +85,8 @@ analytics:
 # Site Author
 author:
   name             : "Cloudexchange"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
+  avatar           : "https://cloudexchange.co.kr/static/base/header_logo.png"
+  bio              : ""
   location         : "Somewhere"
   email            :
   uri              :
