--- a/_config.yml
+++ b/_config.yml
@@ -84,10 +84,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Cloudexchange"
-  avatar           : "https://cloudexchange.co.kr/static/base/header_logo.png"
+  name             : "Cloudexchage"
+  avatar           : # "https://cloudexchange.co.kr/static/base/header_logo.png"
   bio              : ""
-  location         : "Somewhere"
+  location         : ""
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
