--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ analytics:
 author:
   name             : "Cloudexchage"
   avatar           : # "https://cloudexchange.co.kr/static/base/header_logo.png"
-  bio              : ""
-  location         : ""
+  bio              : #""
+  location         : #""
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -253,3 +253,12 @@ defaults:
       comments: # true
       share: true
       related: true
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
