--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,9 @@
 main:
   # - title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+   - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
+     url: https://cloudexchange.co.kr/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
