--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko"
 title                    : "TECH BLOG"
 title_separator          : "-"
-name                     : "Cloudexchange"
+name                     : "C"
 description              : "An amazing website."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -84,7 +84,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Cloudexchage"
+  name             : "Cloud"
   avatar           : # "https://cloudexchange.co.kr/static/base/header_logo.png"
   bio              : # ""
   location         : # ""
