--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
    - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-     url: https://cloudexchange.co.kr/
+  #   url: https://cloudexchange.co.kr/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
